extends Node

@onready var Locked = $Locked
@onready var Idle = $Idle
@onready var Walk = $Walk
@onready var Duck = $Duck
@onready var Jump = $Jump
@onready var JumpPeak = $JumpPeak
@onready var Fall = $Fall
@onready var Dash = $Dash
@onready var DashJump = $DashJump
@onready var WallGrab = $WallGrab
@onready var WallSlide = $WallSlide
